Jdbc Template 코드, 주석정리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.profiles.active=local
 spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.username=sa
 
-#jdbcTemplate sql log
+#jdbcTemplate sql log -> 로그를 띄워주는 역할 -> 쿼리문에 로그를 확인할 수 있다.
 logging.level.org.springframework.jdbc=debug
 
 #MyBatis
