--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,7 @@
 spring.profiles.active=test
-spring.datasource.url=jdbc:h2:tcp://localhost/~/testcase
-spring.datasource.username=sa
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/testcase->이 부분은 어차피 스프링에서 메모리 임베디드 db로 알아서 설정되서 굳이 필요없음
+#spring.datasource.username=sa->이 부분은 어차피 스프링에서 메모리 임베디드 db로 알아서 설정되서 굳이 필요없음
+#은 주석을 치는 것이다.
 #jdbcTemplate sql log
 logging.level.org.springframework.jdbc=debug
 
