--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,12 @@ spring.datasource.username=sa
 #jdbcTemplate sql log -> 로그를 띄워주는 역할 -> 쿼리문에 로그를 확인할 수 있다.
 logging.level.org.springframework.jdbc=debug
 
-#MyBatis
+#MyBatis ->src 뿐만 아니라 test에서 적용해야함
 mybatis.type-aliases-package=hello.itemservice.domain
 mybatis.configuration.map-underscore-to-camel-case=true
-logging.level.hello.itemservice.repository.mybatis=trace
+#MyBatis 로그 확인해주는 역할
+logging.level.hello.itemservice.repository.mybatis=trace 
+
 
 #JPA log
 logging.level.org.hibernate.SQL=DEBUG
