--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,8 +5,9 @@ spring.profiles.active=test
 #jdbcTemplate sql log
 logging.level.org.springframework.jdbc=debug
 
-#MyBatis
+#MyBatis ->src 뿐만 아니라 test에서 적용해야함
 mybatis.type-aliases-package=hello.itemservice.domain
+#언더스코어 표기법을 카멜로 자동 변환해준다.
 mybatis.configuration.map-underscore-to-camel-case=true
 logging.level.hello.itemservice.repository.mybatis=trace
 
